# sad

./: .cgen  .gitignore  CMakeLists.txt  README.md  gen  install  install.sh  meson.build
check/: CMakeLists.txt  main.c  meson.build  sad.sad
src/: CMakeLists.txt  SadArray.sad  SadDict.sad  Vector.c.ohce  Vector.h.ohce  cgen.sh  meson.build  read.c  read.h  sad.c  sad.h  sad_parser.c  sad_to_string.c  write.c  write.h
